--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,22 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>About Me
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
-
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+  Hi, I’m Ashley LeBoeuf, a passionate web developer who thrives on creating sleek, functional,
+  and user-friendly websites. My journey into web development started with a curiosity for how websites work,
+  and it quickly turned into a full-fledged career that allows me to merge creativity with problem-solving.
+  
+  With 5 years of experience, I specialize in front-end development, crafting responsive designs with
+  modern web technologies like HTML, CSS, and JavaScript frameworks like React and Vue.
+  I also have a solid understanding of back-end technologies such as Node.js, Express, and database management
+  with MongoDB and MySQL, enabling me to build full-stack applications.
+  
+  Beyond the technical skills, I pride myself on effective communication and collaboration,
+  ensuring that client visions are translated into pixel-perfect, high-performing websites.
+  Whether it's building an e-commerce platform, optimizing a website for SEO, or creating a custom web app,
+  I approach each project with dedication and a user-first mindset.
+  
+  When I’m not coding, you can find me exploring design trends, tinkering with new technologies,
+  or honing my skills in writing code and developing projects.
+  I'm excited to bring my skills and enthusiasm to your next project. Let’s create something amazing together!
+  
+  Feel free to check out my portfolio or get in touch via email or phone!</p>
